@@ -23,8 +23,7 @@ width="125" height="37" border="0" alt="SourceForge.net Logo"></a>
 
 <table width="100%">
 <tr>
-<td width="180px" valign="top"><br>
- 
+<td width="180px" valign="top">
 
 <div class="menu">
 <ul>
@@ -32,6 +31,8 @@ width="125" height="37" border="0" alt="SourceForge.net Logo"></a>
 
 <li><a href="index.html#features">Features</a></li>
 
+</ul>
+<ul>
 <li><a href="screenshots.html">Screen Shots</a></li>
 </ul>
 
@@ -71,6 +72,10 @@ width="125" height="37" border="0" alt="SourceForge.net Logo"></a>
 </ul>
 
 <ul>
+<li><a href="ide.html">Editor Support<a></a></li>
+</ul>
+
+<ul>
 <li><a href="devnotes.html">Sahi - Technical Aspects</a></li>
 </ul>
 
@@ -80,6 +85,18 @@ width="125" height="37" border="0" alt="SourceForge.net Logo"></a>
 <li><a href="problems.html#notyet">Not yet supported, but coming
 in</a></li>
 </ul>
+
+<hr>
+
+<ul>
+<li><a href="http://sourceforge.net/projects/sahi" target="_blank">On Sourceforge</a></li>
+<li><a href="http://sourceforge.net/forum/?group_id=151639" target="_blank">Forums</a></li>
+<li><a href="http://sourceforge.net/tracker/?group_id=151639&atid=781586" target="_blank">Report/View Bugs</a></li>
+<li><a href="https://lists.sourceforge.net/lists/listinfo/sahi-users" target="_blank">Mailing List</a></li>
+<li><a href="http://sourceforge.net/users/narayanraman/" target="_blank">Appreciation/Criticism</a></li>
+</ul>
+
+
 </div>
 </td>
 <td valign="top">
